fix: bug with test